# small-kv

./: .gitmodules  CMakeLists.txt
proto_types/: types.proto
small-kv/: CMakeLists.txt  kv.cpp  kv.hpp
src/: main.cpp
src/proto_types/: CMakeLists.txt
src/small-kv/: CMakeLists.txt
